bug 46989, cookies don't work if components.reg is missing, r=dougt